--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-   <div class="site">
+  <header>
+    <h1>HTML ASSIGNMENTS</h1>
+  </header>
+  <div class="personal-info">
+    <h2>QUEENOLA UWAGWU-KALU</h2>
+    <h2>ALT/SOE/24/1338</h2>
+  </div>
+  <div class="site-links">
     <a href="./Personal/personal.html">Personal Details Page</a>
-  </div>
-   <div class="site">
     <a href="./Table/table.html">Table Page</a>
-  </div>
-   <div class="site">
     <a href="./Media/media.html">Media Page</a>
-  </div> 
+</div> 
 </body>
 </html>
