--- a/Media/media.html
+++ b/Media/media.html
@@ -8,8 +8,7 @@
   </head>
   <body>
     <header class="header">
-      <h1>WHERE I AM HEADED
-      </h1>
+      <h1>WHERE I AM HEADED</h1>
     </header>
     <div class="gallery">
       <figure class="card">
@@ -71,24 +70,36 @@
 
     <div class="yadayada">
       <p class="yada">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla rem rerum
-        ipsum deleniti earum impedit illum voluptatibus dolorem debitis
-        laudantium nemo sapiente, asperiores omnis exercitationem suscipit
-        recusandae. Similique, accusamus consectetur.
+        The flickering light of the laptop screen illuminates my face, a
+        reflection of the dreams swirling within me. I'm 26, and the world of
+        filmmaking feels both tantalizingly close and impossibly distant. For
+        years, it's been a whisper in the back of my mind, a yearning that grows
+        louder with each passing film I devour. I see stories everywhere, in the
+        bustling city streets, in quiet moments of introspection, in the faces
+        of strangers on the bus. They clamor to be told, and I feel a burning
+        need to be the one to tell them.
       </p>
 
       <p class="yada">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla rem rerum
-        ipsum deleniti earum impedit illum voluptatibus dolorem debitis
-        laudantium nemo sapiente, asperiores omnis exercitationem suscipit
-        recusandae. Similique, accusamus consectetur.
+        Right now, my "studio" is my cramped apartment, my "crew" consists of my
+        ever-patient best friend who agrees to hold the makeshift boom mic (a
+        broom handle and a sock), and my "budget" is mostly comprised of
+        leftover pizza money. But these limitations don't dampen my enthusiasm.
+        I’m learning everything I can, from online tutorials on cinematography
+        to screenwriting books that line my shelves. I spend hours watching
+        films, not just for entertainment, but to dissect the director's
+        choices, the framing, the lighting, the way the story unfolds.
       </p>
 
       <p class="yada">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla rem rerum
-        ipsum deleniti earum impedit illum voluptatibus dolorem debitis
-        laudantium nemo sapiente, asperiores omnis exercitationem suscipit
-        recusandae. Similique, accusamus consectetur.
+        The path ahead feels daunting, a vast, uncharted territory. There are
+        days when self-doubt creeps in, whispering that I'm too late, too
+        inexperienced, too… everything. But then I remember the stories, the
+        ones that burn inside me, waiting for their chance to be seen. And that
+        fire, that passion, is what keeps me going. It pushes me to pick up the
+        camera, to write another scene, to keep learning, keep creating, keep
+        dreaming. Because I know, deep down, that this isn't just a whim; it's a
+        calling. I'm a filmmaker, or at least, I'm going to be.
       </p>
     </div>
   </body>
